--- a/workflows/greeting.yml
+++ b/workflows/greeting.yml
@@ -1,16 +1,21 @@
 name: Greetings
 
-on: [pull_request_target, issues]
+on: [pull_request, issues]
 
 jobs:
-  greetings:
+  greeting:
     runs-on: ubuntu-latest
-    permissions:
-      issue: write
-      pull-requests: write
     steps:
-      - uses: actions/first-interaction@v1
-        with:
-          repo-token: ${{secrets.GITHUB_TOKEN}}
-          issue-message: "We appreciate you pointing us to the problem, and as soon as time allows, we will look into it. Thank you!"
-          pr-message: "We appreciate you creating your first pull request and look forward to reviewing your future contributions. Thanks a bunch, GSSoC'24 Team"
+    - uses: actions/first-interaction@v1
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        issue-message: |
+          # Welcome ${{github.actor}} :tada: 
+          We appreciate you pointing us to the problem, and as soon as time allows, we will look into it. Thank you!
+
+        pr-message: |
+          # Welcome ${{github.actor}} :tada: 
+          We appreciate you creating your first pull request and look forward to reviewing your future contributions. Thanks a bunch, GSSoC'24 Team
+          ![giphy 2](https://cloud.githubusercontent.com/assets/395397/14451851/3abad496-003f-11e6-9a35-1ba112d981d7.gif)
+
+
